added library and book Angualr -code

--- a/package.json
+++ b/package.json
@@ -1,51 +1,64 @@
 {
-  "name": "my-first-project",
-  "version": "0.0.0",
-  "license": "MIT",
+  "name": "jira-clone-angular-frontend",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod=true --sourceMap=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "@angular/animations": "^5.0.0",
-    "@angular/http": "^6.0.0",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
-    "jquery": "^3.3.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "@angular/animations": "~9.1.11",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "~9.1.11",
+    "@angular/compiler": "~9.1.11",
+    "@angular/core": "~9.1.11",
+    "@angular/forms": "~9.1.11",
+    "@angular/platform-browser": "~9.1.11",
+    "@angular/platform-browser-dynamic": "~9.1.11",
+    "@angular/router": "~9.1.11",
+    "@datorama/akita": "^5.0.1",
+    "@datorama/akita-ng-entity-service": "^2.0.0",
+    "@ngneat/content-loader": "^4.1.0",
+    "@ngneat/until-destroy": "^7.1.6",
+    "date-fns": "^2.14.0",
+    "ng-zorro-antd": "^9.1.2",
+    "ngx-quill": "^11.1.0",
+    "quill": "^1.3.7",
+    "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.6.2",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.4",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^12.0.7",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "~9.1.11",
+    "@datorama/akita-ng-router-store": "^5.0.0",
+    "@datorama/akita-ngdevtools": "^4.0.0",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.1.1",
+    "protractor": "~7.0.0",
+    "tailwindcss": "^1.4.6",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3",
+    "webpack": "^4.32.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0"
   }
 }
